force-app/main/default/objects/Service_Revenue_Line__c/Service_Revenue_Line__c.object-meta.xml
<CustomObject>
    <label>Service Revenue Line</label>
    <nameField>
        <displayFormat>SRL-{00000}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Revenue Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>