force-app/main/default/objects/Service_Revenue_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Revenue_Plans_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>