force-app/main/default/objects/Service_Revenue_Line__c/fields/Actual_Non_billable_Hoirs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Non_billable_Hoirs__c</fullName>
    <label>Actual Non-billable Hoirs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>