force-app/main/default/objects/Service_Revenue_Line__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <formula>Fixed_Fee__c + 
IF(Actual_Billable_Hours__c - Included_Hours__c &gt; 0,
Billing_Rate__c *  (Actual_Billable_Hours__c - Included_Hours__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>