force-app/main/default/objects/Service_Revenue_Line__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Revenue_Plans_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>