force-app/main/default/objects/Service_Revenue_Line__c/fields/Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate__c</fullName>
    <label>Billing Rate</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>