force-app/main/default/objects/Service_Revenue_Line__c/fields/Expected_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Billable_Hours__c</fullName>
    <label>Expected Billable Hours</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>