force-app/main/default/objects/Service_Revenue_Line__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <formula>Fixed_Fee__c +
IF(Expected_Billable_Hours__c - Included_Hours__c &gt; 0,
Billing_Rate__c * (Expected_Billable_Hours__c - Included_Hours__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>