force-app/main/default/objects/Service_Revenue_Line__c/fields/Included_Hours__c.field-meta.xml
<CustomField>
    <fullName>Included_Hours__c</fullName>
    <label>Included Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>