force-app/main/default/objects/Service_Revenue_Line__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipName>Revenue_Plans_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>