force-app/main/default/objects/Service_Revenue_Line__c/fields/Realization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Realization_Rate__c</fullName>
    <formula>(Actual_Billable_Hours__c / Expected_Billable_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realization Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>