force-app/main/default/objects/Service_Revenue_Line__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Revenue_Plan_Resource__c.Revenue_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Revenue_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Revenue_Plan_Resource__c</referenceTo>
    <relationshipName>Revenue_Plans_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>