force-app/main/default/objects/Service_Revenue_Line__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>Resource__r.Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>