force-app/main/default/objects/Service_Revenue_Line__c/fields/Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Plan</label>
    <referenceTo>Revenue_Plan__c</referenceTo>
    <relationshipName>Revenue_Plans_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>