force-app/main/default/objects/Service_Revenue_Line__c/validationRules/Line_Start_Month_vs_Plan_Start_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Start_Month_vs_Plan_Start_Month</fullName>
    <active>true</active>
    <errorConditionFormula>MONTH(Start_Date__c) !=  MONTH(Revenue_Plan__r.Start_Date__c)</errorConditionFormula>
    <errorMessage>Start Date month must be the same as the Revenue Plan Start Date month.</errorMessage>
</ValidationRule>