force-app/main/default/objects/Service_Revenue_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revenue_Plan__c</columns>
    <columns>Resource__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Billing_Rate__c</columns>
    <columns>Expected_Billable_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>